test/implicitDup23_12.slq

def main(){
    x := H(0);
    y := !x;
    z := y;
    a := z;
	__show(__query("dep",z));
    x := H(x);
    b := !z; /// error
    return (x, z); /// error
}
